# fast_text

./: .gitignore  .travis.yml  Cargo.toml  README.md  beep  sample_text.txt  t.txt  travis.yml
doc/: search-index.js
doc/cute/: macro.c.html
doc/fast_text/: fn.analogies.html  fn.min_cbow.html  fn.nn.html  fn.skipgram.html  min_skipgram.v.html  predict.v.html  quantize.v.html  sidebar-items.js
doc/kolmogorov_smirnov/: index.html
doc/libc/: constant.ABDAY_2.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_3.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CHAOS.html  constant.AF_CNT.html  constant.AF_DATAKIT.html  constant.AF_E164.html  constant.AF_ISO.html  constant.AF_LINK.html  constant.AF_LOCAL.html  constant.AF_NETBIOS.html  constant.AF_ROUTE.html  constant.AF_SIP.html  constant.AF_SNA.html  constant.AF_UNIX.html  constant.AIO_ALLDONE.html  constant.AIO_LISTIO_MAX.html  constant.AIO_NOTCANCELED.html  constant.B1200.html  constant.B134.html  constant.B14400.html  constant.B1800.html  constant.B19200.html  constant.B200.html  constant.B230400.html  constant.B28800.html  constant.B300.html  constant.B38400.html  constant.B7200.html  constant.B75.html  constant.B9600.html  constant.BPF_ALIGNMENT.html  constant.BS1.html  (+576 more)
doc/rand/: trait.Rand.html  trait.Rng.html
docs/cute/: index.html
docs/fast_text/: analogies.v.html  cbow.v.html  fn.cbow.html  fn.install.html  fn.min_skipgram.html  fn.predict.html  index.html  (+6 more)
src/: lib.rs
(+690 files in other folders)
