[package]
name = "fast_text"
version = "0.0.9"
authors = ["Dominic Burkart <dominicburkart@gmail.com>"]
license = "MIT"
description = "High-level Rust binding for Facebook's FastText package."
repository = "https://github.com/DominicBurkart/fast_text"
keywords = ["nlp", "word-embedding", "machine-learning", "ml", "fasttext"]

[dependencies]
cute = "0.3.0"
kolmogorov_smirnov = "1.1.0"