[package]
name = "fast_text"
version = "0.1.2"
authors = ["Dominic Burkart <dominicburkart@gmail.com>"]
license = "MIT"
description = "Binding for Facebook's FastText package."
repository = "https://github.com/DominicBurkart/fast_text"
keywords = ["nlp", "word-embedding", "machine-learning", "ml", "fasttext"]

[badges]
travis-ci = { repository = "DominicBurkart/fast_text" }

[dependencies]
cute = "0.3.0"
kolmogorov_smirnov = "1.1.0"